# drone_ros

./: 10-droni.rules  README.md  contributors.txt  droni_mission_wp.mission  droni_mission_wp_cti.mission
doc/: relatorio_tec_desenvolvimento.lyx  relatorio_tec_desenvolvimento.lyx~
src/diagnostics_stack/: CMakeLists.txt  package.xml
src/diagnostics_stack/launch/: droni_stack.launch  test_stack.launch
src/diagnostics_stack/src/: dvsutil.cpp  sbai_rotina_atuadores.txt  switch_control.cpp
src/droni_airspeed_driver/: CMakeLists.txt  package.xml
src/droni_airspeed_driver/launch/: airspeed_node.launch
src/droni_airspeed_driver/msg/: sensor_data.msg  sensor_data.msg~
src/droni_airspeed_driver/src/: airspeed_node.cpp  airspeed_node_wtf.cpp  airspeed_node_wtf2.cpp  airspeed_node_wtf3.cpp  airspeed_node_wtf4.cpp  airspeed_node_x.cpp
src/droni_cam_driver/src/: fakecam_nodelet.cpp
src/fakecam/launch/: fakecam_nodelet.launch
src/mtig_driver/: CMakeLists.txt
src/mtig_driver/include/: sensorData.h
src/mtig_driver/launch/: mtig_driver.launch
src/mtig_driver/src/: main.cpp  messageMaker.cpp  mtiG.cpp  sensorData.cpp
src/mtig_driver_msgs/: CMakeLists.txt  package.xml
src/protomav/: CMakeLists.txt  package.xml
src/protomav/config/: vehicle_params.yaml
src/protomav/config/pioneer/: base_local_planner_params.yaml  base_local_planner_params_backup.yaml  costmap_common_params.yaml  geo_map_14:42:19.tif  global_costmap_params.yaml  global_planner_params.yaml  move_base.yaml  params.yaml  robochair.machine
src/protomav/include/: .MavMessenger.h.kate-swp
src/protomav/include/mavlink/common/: version.h
src/protomav/include/protomav/: MavBroadcast.h  MavCamera.h  MavControl.h  MavHeartbeat.cpp  MavHeartbeat.h  MavMessager.h  MavMessenger.h  MavStatus.h  WPManager.h  WPManagerClient.h  Waypoint.h  vehicle.h
src/protomav/launch/: gcs_bridge.launch  heartbeat.launch  mavros.launch  move_base.launch  nav_test.launch  navigation_test.launch  protomav.launch  status.launch  wp_manager.launch
src/protomav/msg/: WaypointMsg.msg
src/protomav/src/: MavMessenger.cpp  broadcast.cpp  camera.cpp  control.cpp  heartbeat.cpp  status.cpp  wp_manager.cpp  wp_manager_client.cpp
src/protomav/srv/: AddWaypoint.srv  GetWPListSize.srv  GetWPVector.srv
src/ptgrey_simple/launch/: ptgrey_nodelet.launch  view_ptgrey_nodelet.launch
src/ptgrey_simple/src/: GrabCallbackClass.cpp  GrabCallbackClass.h  pgr_simple_nodelet.cpp  pgr_simple_nodelet.h
src/ros2mav/: CMakeLists.txt  package.xml
src/ros2mav/config/: droni.yaml  pioneer.yaml  vero.yaml  vero.yaml~
src/ros2mav/include/ros2mav/: Gps2Mav.h  Imu2Mav.h  Ros2Att.h  Ros2Vfr.h  Temp2Mav.h  alt2mav.h  ros2mav.h  soc2mav.h
src/ros2mav/launch/: gps2mav.launch  image2mav.launch  image2mav_copy.launch  imu2nav.launch  mavlink_system.launch  ros2att.launch  ros2mav.launch  ros2vfr.launch  soc2mav.launch  temp2mav.launch  test_mavros.launch
src/ros2mav/src/: alt2mav.cpp  gps2mav.cpp  imu2mav.cpp  ros2att.cpp  ros2vfr.cpp  soc2mav.cpp  temp2mav.cpp
src/ros_lightware/altitude_sensor/src/: altitude_sensor_node.cpp
src/ros_pololu/launch/: new_launch.launch
src/ros_pololu_servo/: CMakeLists.txt  CMakeLists.txt~
src/ros_pololu_servo/launch/: droni_motors.yaml  pololu_droni.launch  pololu_example.launch  pololu_motors.yaml
src/ros_pololu_servo/src/: pololu_D_controller.cpp  pololu_controller_node.cpp  pololu_talker_2.cpp
src/ros_pololu_servo/src/ros_pololu_servo/: PololuController.cpp  pololu_talker_2.cpp
src/sf11_altimeter/: CMakeLists.txt
src/sf11_altimeter/launch/: sf11c_node.launch
src/sf11_altimeter/src/: sf11C.cpp
src/stack_tester/: CMakeLists.txt  package.xml
src/stack_tester/include/: dvsutil.h
src/stack_tester/launch/: droni_stack.launch
src/stack_tester/scripts/: log_master_timestamps.m
src/stack_tester/src/: inner_loop.cpp
src/yocto-master/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/yocto-master/msg/: PWM_info.msg~
src/yocto-master/src/: yocto_PWM_node.cpp
(+1 files in other folders)
